--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "test": "nodemon -w"
+    "start": "nodemon -w",
+    "test": "jest --watchAll"
+
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
