--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "nodemon -w",
     "test": "jest --watchAll"
-
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7"
   },
