--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "blockJS",
   "version": "1.0.1",
   "description": "",
-  "main": "test.js",
+  "main": "app/index.js",
   "scripts": {
-    "start": "nodemon -w",
-    "test": "jest --watchAll"
+    "watch": "nodemon -w",
+    "test": "jest --watchAll",
+    "start": "node ./app"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "jest": "^27.0.4",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.9"
   },
   "dependencies": {
-    "crypto-js": "^4.0.0"
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
+    "ws": "^7.5.2"
   }
 }
